[package]
name = "skill-check"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"
